--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <!-- THE NAMES OF THE BRIDE AND GROOM -->
             <div class="names hide">
                 <div class="container">
-                    Sharon <span><i>&#38;</i></span> Michael
+                    Gabriela <span><i>&#38;</i></span> Fernando
                 </div><!-- /.container -->
             </div><!-- /.names -->
 
@@ -175,12 +175,12 @@
 
                 <!-- THE TITLE -->
                 <div class="col-md-12">
-                    <h2>Are Getting Married</h2>
+                    <h2>Se van a casar</h2>
                 </div><!-- /.col-md-12-->
                 
                 <!-- SMALL INTRODUCTORY TEXT -->
                 <div class="col-md-12">
-                    <p>Welcome to the wedding website of Sharon Leitner and Michael Jansen. We’re so happy to share with you all there is to know about our happyness: how we meet, the proposal, the wedding location and the events calendar that will follow. Follow on to read about the story of our love!</p>
+                    <p>Bienvenido a la página web de la boda de Gabriela y Fernando. Estamos muy felices de poder compartir con ustedes todo lo que hay que saber acerca de nuestra boda: Como nos conocimos, la propuesta, el lugar de la boda y el calendario de eventos que seguirá. Siga leyendo sobre la historia de nuestro union!</p>
                 </div><!-- /.col-md-12-->
 
                 <!-- READMORE BUTTON -->
@@ -207,8 +207,8 @@
                     <div class="container">
                         <div class="row">
                             <header class="col-md-6 col-md-offset-3 hide">
-                                Our Love Story
-                                <span>The Good Times We Had Together</span>
+                                Nuestra Historia
+                                <span>los Buenos Momentos Que Pasamos Juntos</span>
                             </header>
                         </div><!-- /.row -->
                     </div><!-- /.container -->
@@ -221,13 +221,19 @@
         <div class="container">
 
             <!-- SECONDARY TITLE -->
-            <h3 class="text-center intermediary-waypoint">Sharon Stockowich & Michael Eden</h3>
+            <h3 class="text-center intermediary-waypoint">Gabriela Valdes & Fernando Lucena</h3>
 
             <!-- SECTION SMALL CONTENT -->
             <div class="row">
                 <div class="col-md-12">
-                    <p>Our love story begun on a Friday night, late one spring. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt </p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </p>
+                    <p>Tenemos una historia bastante curiosa! La verdad, cuando hablamos de ello, nos sentimos muy afortunados de habernos conocido en un mundo tan grande.
+Gabriela fue a los Estados Unidos a aprender inglés y a ayudar a su prima Lorena por un año, que había tenido un hijo hace poco y necesitaba apoyo. Para aprender inglés, Gabriela se inscribió en “Norwalk Community College” (NCC).
+ </p>
+                    <p>Fernando estaba estudiando en NCC también, ya que necesitaba tomar unas cuantas clases básicas antes de poder estudiar ingeniería en una universidad más grande.
+Por suerte, NCC de vez en cuando organizaba algunas salidas a Nueva York a un precio bastante reducido. Ambos teníamos una amiga en común, y se dio la ocasión de que nos invitó a ambos a una de estas excursiones a Nueva York. Lo que empezó con una conversación en un autobús de camino a Manhattan, ahora continua con una boda!
+Muchas veces nos ponemos a pensar, y nos damos cuenta de las vueltas que da la vida. Fernando jamás se hubiera imaginado ir a Estados Unidos, mucho menos conocer a alguien de Méjico allí, y muchísimo menos que acabaría casándose con una mejicana! De igual manera, Gabriela no tenía ningún plan de ir
+a Estados Unidos, y para nada tenía pensado conocer a su futuro esposo de España.
+. </p>
                  </div><!-- /.col-md-12 -->
             </div><!-- /.row -->
 
