--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
                 <!-- READMORE BUTTON -->
                 <div class="col-md-12">
-                    <a href="#ourstory" class="btn btn-primary btn-lg">Start Reading</a>
+                    <a href="#ourstory" class="btn btn-primary btn-lg">Comenzar a leer</a>
                 </div><!-- /.rows-->
             </div><!-- /.col-md-12-->
           
