--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <ul class="dropdown-menu">
 
                             <li><a href="#thetop">Home</a></li>
-                            <li class="divider"></li>
+                            <!-- <li class="divider"></li>
                             <li><a href="uielements.html">UI Elements</a></li>
                             <li class="divider"></li>
                             <li><a href="leftcolumn.html">Left Column Page</a></li>
@@ -110,7 +110,7 @@
                 </ul>
 
                 <!-- THE WEDDING DATE -->
-                 <a class="navbar-brand" href="#">25 July, 2014</a>
+                 <a class="navbar-brand" href="#">XX Mayo, 2015</a>
 
                  <!-- THE RIGHT SIDE MENU -->
                 <ul class="nav navbar-nav right-nav">
