--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                         <ul class="dropdown-menu">
 
                             <li><a href="#thetop">Home</a></li>
-                            <!-- <li class="divider"></li>
-                            <li><a href="uielements.html">UI Elements</a></li>
+                            <<li class="divider"></li>
+                            <li><a href="uielements.html">Dummy</a></li>
                             <li class="divider"></li>
-                            <li><a href="leftcolumn.html">Left Column Page</a></li>
+                            <li><a href="leftcolumn.html">Dummy</a></li>
                             <li class="divider"></li>
-                            <li><a href="rightcolumn.html">Right Column Page</a></li>
+                            <li><a href="rightcolumn.html">Dummy</a></li>
                             
                         </ul><!-- /.dropdown-menu -->
                     </li>
@@ -81,11 +81,11 @@
 
                             <li><a href="#ourstory">Nuestrs Historia</a></li>
                             <li class="divider"></li>
-                            <li><a href="#thebrideside">Bride's Party</a></li>
+                            <li><a href="#thebrideside">Dummy</a></li>
                             <li class="divider"></li>
-                            <li><a href="#thegroomside">Groom's Party</a></li>
+                            <li><a href="#thegroomside">Dummy</a></li>
                             <li class="divider"></li>
-                            <li><a href="#weddinglocation">Wedding Location</a></li>
+                            <li><a href="#weddinglocation">Lugar de la boda</a></li>
                             
                         </ul><!-- /.dropdown-menu -->
                     </li>
@@ -114,10 +114,10 @@
 
                  <!-- THE RIGHT SIDE MENU -->
                 <ul class="nav navbar-nav right-nav">
-                    <li><a href="#registry">Registry</a></li>
-                    <li><a href="#guestbook">Guest Book</a></li>
-                    <li><a href="#rsvp">Events / RSVP</a></li>
-                    <li><a href="#" data-toggle="modal" data-target="#myModal">Contact</a></li>
+                    <li><a href="#registry">Registro</a></li>
+                    <li><a href="#guestbook">Libro de Visitas</a></li>
+                    <li><a href="#rsvp">Eventos / RSVP</a></li>
+                    <li><a href="#" data-toggle="modal" data-target="#myModal">Contacto</a></li>
                 </ul><!-- /.navbar-nav -->
 
             </nav><!--/.navbar-collapse -->
