--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">The Wedding <b class="caret"></b></a>
                         <ul class="dropdown-menu">
 
-                            <li><a href="#ourstory">Nuestrs Historia</a></li>
+                            <li><a href="#ourstory">Nuestra Historia</a></li>
                             <li class="divider"></li>
                             <li><a href="#thebrideside">Dummy</a></li>
                             <li class="divider"></li>
@@ -110,13 +110,13 @@
                 </ul>
 
                 <!-- THE WEDDING DATE -->
-                 <a class="navbar-brand" href="#">XX Mayo, 2015</a>
+                 <a class="navbar-brand" href="#">XX Mayo,2015</a>
 
                  <!-- THE RIGHT SIDE MENU -->
                 <ul class="nav navbar-nav right-nav">
                     <li><a href="#registry">Registro</a></li>
                     <li><a href="#guestbook">Libro de Visitas</a></li>
-                    <li><a href="#rsvp">Eventos / RSVP</a></li>
+                    <li><a href="#rsvp">Eventos/RSVP</a></li>
                     <li><a href="#" data-toggle="modal" data-target="#myModal">Contacto</a></li>
                 </ul><!-- /.navbar-nav -->
 
