--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                  <!-- THE RIGHT SIDE MENU -->
                 <ul class="nav navbar-nav right-nav">
                     <li><a href="#registry">Registro</a></li>
-                    <li><a href="#guestbook">Libro de Visitas</a></li>
+                    <li><a href="#guestbook">Guestbook</a></li>
                     <li><a href="#rsvp">Eventos/RSVP</a></li>
                     <li><a href="#" data-toggle="modal" data-target="#myModal">Contacto</a></li>
                 </ul><!-- /.navbar-nav -->
