--- a/index.html
+++ b/index.html
@@ -312,18 +312,20 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
                     </div><!-- /.hide -->
                 </div><!-- /.col-md-4-->
 
-                <!-- THE BRIDE'S DAD -->
-                <div class="col-md-4 bridedad fakeheight">
-                    <div class="hide"> 
+               
+                <!-- THE GROOM -->
+                <div class="col-md-4 thegroom">
+                     <div class="hide">
                         <div class="round-frame-bg">
                             <div class="round-frame">
-                                <img src="img/thebride-dad.jpg" alt="bride's dad">
+                                <img src="img/thegroom.jpg" alt="the groom">
                             </div><!-- /.round-frame -->
                         </div><!-- /.round-frame-bg -->
-                        <h5>John Stockowich (Father)</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                    </div><!-- /.hide -->
+						 <h5>Paul Eden (Father)</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+                    </div>
                 </div><!-- /.col-md-4-->
+
 
             </div><!-- /.row-->
 
