--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
 
                
                 <!-- THE GROOM -->
-                <div class="col-md-4 thegroom">
+                <div class="col-md-4 thebride fakeheight">
                      <div class="hide">
                         <div class="round-frame-bg">
                             <div class="round-frame">
