--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
                 <div class="container">
                     <div class="row">
                         <header class="col-md-6 col-md-offset-3 hide">
-                            La novia
+                            Acerca de la Novia y el Novio
                             <span></span>
                         </header>
                     </div><!-- /.row -->
@@ -293,7 +293,7 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
         <div class="container">
 
             <!-- SECONDARY TITLE -->
-            <h3 class="text-center intermediary-waypoint">These are the friends and family of the bride</h3>
+            <h3 class="text-center intermediary-waypoint">Estas son sus historias</h3>
 
             <div class="row">
 
