--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
 
                 <!-- THE MAP -->
                 <div class="col-md-6">
-                    <iframe style="width:100%;" height="280" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d900.9043479725706!2d-101.00186785400058!3d25.417614816143665!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x94fdedfd521ba72a!2sSan+Juan+Nepomuceno!5e0!3m2!1sen!2s!4v1431471631441"></iframe>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d900.9043479725706!2d-101.00186785400058!3d25.417614816143665!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x94fdedfd521ba72a!2sSan+Juan+Nepomuceno!5e0!3m2!1sen!2s!4v1431471631441" width="600" height="450" frameborder="0" style="border:0"></iframe>
                 </div><!-- /.col-md-6-->
             </div><!-- /.row -->
         </div><!-- /.container -->
