--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
 
                 <!-- THE MAP -->
                 <div class="col-md-6">
-                <iframe src"https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.6401347437472!2d-101.00161471600302!3d25.416853880658515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x868872be37b1d655%3A0x94fdedfd521ba72a!2sSan+Juan+Nepomuceno!5e0!3m2!1sen!2s!4v1431932081653" width="400" height="300"></iframe>
+               <a href="https://goo.gl/maps/TFFz2"><img src="http://i.imgur.com/88TLL5L.jpg" title="source: Google Maps" /></a>
                 </div><!-- /.col-md-6-->
             </div><!-- /.row -->
         </div><!-- /.container -->
