--- a/index.html
+++ b/index.html
@@ -389,13 +389,14 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
                                 <h5>San Juan Nepomuceno </h5>
                                 <p>Hidalgo y Escobedo</p>
                                 <p>Saltillo, Coahuila</p>
+								<p><a href="https://goo.gl/maps/TFFz2">Link al mapa</a></p>
                             </div>
                         </li>
                         <li>
                             <span class="glyphicon glyphicon-time"></span>
                             <div class="alignleft">
                                 <h5>Tel. 412-48-73</h5>
-                                <p>https://www.google.com/maps/place/San+Juan+Nepomuceno/@25.4176148,-101.0018679,19z/data=!4m2!3m1!1s0x0:0x94fdedfd521ba72a</p>
+                                <p></p>
                                 <p></p>
                             </div>
                         </li>
