--- a/index.html
+++ b/index.html
@@ -410,6 +410,40 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
                 </div><!-- /.col-md-6-->
             </div><!-- /.row -->
         </div><!-- /.container -->
+		
+		
+		  <!-- XX INTERMEDIARY CONTENT -->
+                    <p></p>
+
+                    <!-- ADDRESS AND CEREMONY TIME -->
+                    <ul class="locationdetails">
+                        <li>
+                            <span class="glyphicon glyphicon-map-marker"></span>
+                            <div class="alignleft">
+                                <h5>San Juan Nepomuceno </h5>
+                                <p>Hidalgo y Escobedo</p>
+                                <p>Saltillo, Coahuila</p>
+								<p><a href="https://goo.gl/maps/TFFz2">Link al mapa</a></p>
+                            </div>
+                        </li>
+                        <li>
+                            <span class="glyphicon glyphicon-time"></span>
+                            <div class="alignleft">
+                                <h5>Tel. 412-48-73</h5>
+                                <p></p>
+                                <p></p>
+                            </div>
+                        </li>
+                    </ul><!-- /.locationdetails -->
+                </div><!-- /.col-md-6-->
+
+
+                <!-- THE MAP -->
+                <div class="col-md-6">
+               <a href="https://goo.gl/maps/TFFz2"><img src="http://i.imgur.com/88TLL5L.jpg" title="source: Google Maps" /></a>
+                </div><!-- /.col-md-6-->
+            </div><!-- /.row -->
+        </div><!-- /.container xx-->
 
 
         <!-- THE AVAILABLE HOTELS -->
