--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
 
 
               
-                <div class="col-md-6">
+                <div class="col-md-6" class="alignleft">
                <a href="https://goo.gl/maps/TFFz2"><img src="http://i.imgur.com/88TLL5L.jpg" title="source: Google Maps" /></a>
                 </div><!-- /.col-md-6-->
 				
