--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
                         </li>
                         <li>
                             
-                            <div class="alignleft">
-                                <h5><a href="https://goo.gl/maps/9O2n0"><img src="http://i.imgur.com/88TLL5L.jpg" title="source: Google Maps" /></a></h5>
+                            <div class="alignleft" style="height:200px;>
+                                <h5><a href="https://goo.gl/maps/9O2n0"><img src="http://i.imgur.com/z4Dyw30.jpg" title="source: Google Maps" /></a></h5>
                                 <p></p>
                                 <p></p>
                             </div>
