--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
 
     <footer>
         <div class="container">
-            <p>&copy; 2015 Gabriela Valdes &amp; Fernando Lucena - Website by Alkaworks inc 2015</p>
+            <p>&copy; 2015 Gabriela Valdes &amp; Fernando Lucena </p>
         </div>
     </footer>
    
