--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
            
 
                 <!-- THE BRIDE -->
-                <div class="col-md-4 thebride fakeheight" style="text-align:justify>
+                <div class="col-md-4 thebride fakeheight">
                     <div class="hide">
                         <div class="round-frame-bg">
                             <div class="round-frame">
@@ -314,7 +314,7 @@ a Estados Unidos, y para nada ten√≠a pensado conocer a su futuro esposo de Espa√
 
                
                 <!-- THE GROOM -->
-                <div class="col-md-4 thebride fakeheight" style="text-align:justify>
+                <div class="col-md-4 thebride fakeheight">
                      <div class="hide">
                         <div class="round-frame-bg">
                             <div class="round-frame">
