Borrada 3ra foto
FLG

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <li><img src="img/slider/photo1.jpg" alt="photo 1" /></li>
                     <li><img src="img/slider/photo2.jpg" alt="photo 2" /></li>
                     <li><img src="img/slider/photo3.jpg" alt="photo 3" /></li>
-                    <li><img src="img/slider/photo4.jpg" alt="photo 4" /></li>
+                    <!--<li><img src="img/slider/photo4.jpg" alt="photo 4" /></li>-->
                 </ul><!-- /.slides -->
 
             </div><!-- /.flexslider -->
