--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 </ul>
 
                 <!-- THE WEDDING DATE -->
-                <a class="navbar-brand" href="#">21 de Noviembre,2015</a>
-
+                <P ALIGN=center><font size=6>21 de Noviembre,2015</font>
+<!-- <a class="navbar-brand" href="#">					21 de Noviembre,2015</a> -->
                  <!-- THE RIGHT SIDE MENU
                 <ul class="nav navbar-nav right-nav">
                     <li><a href="#registry">Registro</a></li>
