Cambio color de la fecha.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </ul>
 
                 <!-- THE WEDDING DATE -->
-                <P ALIGN=center><font size=6>21 de Noviembre,2015</font>
+                <font color="salmon"><P ALIGN=center><font size=6>21 de Noviembre,2015</font></font>
 <!-- <a class="navbar-brand" href="#">					21 de Noviembre,2015</a> -->
                  <!-- THE RIGHT SIDE MENU
                 <ul class="nav navbar-nav right-nav">
