--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                 </ul>
 
                 <!-- THE WEDDING DATE -->
-                <font color="salmon"><P ALIGN=center><font size=6>21 de Noviembre,2015</font></font>
+                <font color="salmon"><P ALIGN=center><font size=6>Gabriela Y Fernando</font><BR>
+              	<font size=4>21 de Noviembre, 2015<BR></font></font>
 <!-- <a class="navbar-brand" href="#">					21 de Noviembre,2015</a> -->
                  <!-- THE RIGHT SIDE MENU
                 <ul class="nav navbar-nav right-nav">
