un poquito mas hasta centrar texto

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                 <!-- THE WEDDING DATE -->
                 <font color="salmon"><P ALIGN=center><font size=6>Gabriela Y Fernando</font><BR>
-              	<font size=4>21 de Noviembre, 2015<BR></font></font>
+              	<font size=4>21 de Noviembre, 2015<BR></font></font></P>
 <!-- <a class="navbar-brand" href="#">					21 de Noviembre,2015</a> -->
                  <!-- THE RIGHT SIDE MENU
                 <ul class="nav navbar-nav right-nav">
@@ -170,7 +170,7 @@
 
 
     <section id="home">
-        <div class="container">
+        <div class="container"> 
             
             <div class="row">
 
@@ -181,10 +181,10 @@
                 
                 <!-- SMALL INTRODUCTORY TEXT -->
                 <div class="col-md-12">
-                    <p>Bienvenido a la página web de la boda de Gabriela y Fernando. Estamos muy felices de poder compartir con ustedes todo lo que hay que saber acerca de nuestra boda: Como nos conocimos, la propuesta, el lugar de la boda y el calendario de eventos que seguirá. Siga leyendo sobre la historia de nuestro union!</p>
+                    <p>Bienvenido a la página web de la boda de Gabriela y Fernando. Estamos muy felices de poder compartir con ustedes todo lo que hay que saber sobre este gran día: Como nos conocimos, un poco acerca de nosotros, el lugar de la boda y el calendario de eventos que seguirá. ¡Siga leyendo sobre la historia de nuestro union!</p>
                 </div><!-- /.col-md-12-->
 
-                <!-- READMORE BUTTON -->
+                <!-- READMORE BUTTON
                 <div class="col-md-12">
                     <a href="#ourstory" class="btn btn-primary btn-lg">Comenzar a leer</a>
                 </div><!-- /.rows-->
@@ -209,7 +209,7 @@
                         <div class="row">
                             <header class="col-md-6 col-md-offset-3 hide">
                                 Nuestra Historia
-                                <span>los Buenos Momentos Que Pasamos Juntos</span>
+                                <span>Los Buenos Momentos Que Pasamos Juntos</span>
                             </header>
                         </div><!-- /.row -->
                     </div><!-- /.container -->
@@ -222,19 +222,19 @@
         <div class="container">
 
             <!-- SECONDARY TITLE -->
-            <h3 class="text-center intermediary-waypoint">Gabriela Valdes & Fernando Lucena</h3>
+            <h3 class="text-center intermediary-waypoint">Griselda Gabriela Valdez Valdés & Fernando Lucena Gil</h3>
 
             <!-- SECTION SMALL CONTENT -->
             <div class="row">
                 <div class="col-md-12">
-                    <p>Tenemos una historia bastante curiosa! La verdad, cuando hablamos de ello, nos sentimos muy afortunados de habernos conocido en un mundo tan grande.
+                    <p><p align=justify>¡Tenemos una historia bastante curiosa! La verdad, cuando hablamos de ello, nos sentimos muy afortunados de habernos conocido en un mundo tan grande.
 Gabriela fue a los Estados Unidos a aprender inglés y a ayudar a su prima Lorena por un año, que había tenido un hijo hace poco y necesitaba apoyo. Para aprender inglés, Gabriela se inscribió en “Norwalk Community College” (NCC).
- </p>
-                    <p>Fernando estaba estudiando en NCC también, ya que necesitaba tomar unas cuantas clases básicas antes de poder estudiar ingeniería en una universidad más grande.
+ <BR><BR>
+                    Fernando estaba estudiando en NCC también, ya que necesitaba tomar unas cuantas clases básicas antes de poder estudiar ingeniería en una universidad más grande.
 Por suerte, NCC de vez en cuando organizaba algunas salidas a Nueva York a un precio bastante reducido. Ambos teníamos una amiga en común, y se dio la ocasión de que nos invitó a ambos a una de estas excursiones a Nueva York. Lo que empezó con una conversación en un autobús de camino a Manhattan, ahora continua con una boda!
-Muchas veces nos ponemos a pensar, y nos damos cuenta de las vueltas que da la vida. Fernando jamás se hubiera imaginado ir a Estados Unidos, mucho menos conocer a alguien de Méjico allí, y muchísimo menos que acabaría casándose con una mejicana! De igual manera, Gabriela no tenía ningún plan de ir
+Muchas veces nos ponemos a pensar, y nos damos cuenta de las vueltas que da la vida. ¡Fernando jamás se hubiera imaginado ir a Estados Unidos, mucho menos conocer a alguien de Méjico allí, y muchísimo menos que acabaría casándose con una mejicana! De igual manera, Gabriela no tenía ningún plan de ir
 a Estados Unidos, y para nada tenía pensado conocer a su futuro esposo de España.
-. </p>
+</p</p>
                  </div><!-- /.col-md-12 -->
             </div><!-- /.row -->
 
